--- a/Projects/index.html
+++ b/Projects/index.html
@@ -5,8 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <link rel="stylesheet" href="../theme/style.css">
 </head>
 <body>
+  <h1>Welcome to my project page!</h1>
+  <ol>
+    <li>Project</li>
+    <li>Project</li>
+    <li>Project</li>
+  </ol>
 
 </body>
 </html>
