Add EndOf Week2 SavvyClass

--- a/index.html
+++ b/index.html
@@ -5,19 +5,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+  <link rel="stylesheet" href="../theme/style.css">
+  <div id="navigation">
+    <ul class="container">
+      <li>
+        <a href="../projects">projects</a>
+        <ul class="dropdown">
+          <li>First</li>
+          <li>Second</li>
+          <li>Third</li>
+        </ul>
+      </li>
+      <li><a href="../">home</a></li>
+    </ul>
+  </div>
 </head>
 <body>
-  <h1>Welcome to Kevin's Savvy Coders website!!</h1>
-  <h2>February 2018</h2>
-  <p>This portfolio will hold all the activities we tackle in the Feb. 2018 Savvy Coders class.</p>
+  <div class="backdrop full-width">
+    <div id="welcome">
+    <h4>Welcome to Kevin's Savvy Coders website!!</h4>
+    <h5>February 2018</h5>
+    </div>
+    <p>This portfolio will hold all the activities we tackle in the Feb. 2018 Savvy Coders class.</p>
+  <div id="barf">
+    <ol>
+      <li>one</li>
+      <li>two</li>
+      <li>three</li>
+        <a href="https://github.com/KevinHeinz/SavvyPortfolioProject">github</a>
+    </ol>
+  </div>
 
   <<img src="https://thumb7.shutterstock.com/display_pic_with_logo/580987/739949434/stock-photo-portrait-of-an-upset-cute-little-kid-standing-with-arms-folded-and-looking-at-camera-isolated-over-739949434.jpg" alt="">
-  <ol>
-    <li>one</li>
-    <li>two</li>
-    <li>trio</li>
-      <a href="https://github.com/KevinHeinz/SavvyPortfolioProject">github</a>
-  </ol>
-
-</body>
-</html>
+  </body></html>
