--- a/Projects/index.html
+++ b/Projects/index.html
@@ -6,6 +6,19 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <link rel="stylesheet" href="../theme/style.css">
+  <div id="navigation">
+    <ul class="container">
+      <li>
+        <a href="../projects">projects</a>
+        <ul class="dropdown">
+          <li>First</li>
+          <li>Second</li>
+          <li>Third</li>
+        </ul>
+      </li>
+      <li><a href="../">home</a></li>
+    </ul>
+  </div>
 </head>
 <body>
   <h1>Welcome to my project page!</h1>
