Add profile pic

--- a/index.html
+++ b/index.html
@@ -37,5 +37,5 @@
     </ol>
   </div>
 
-  <<img src="https://thumb7.shutterstock.com/display_pic_with_logo/580987/739949434/stock-photo-portrait-of-an-upset-cute-little-kid-standing-with-arms-folded-and-looking-at-camera-isolated-over-739949434.jpg" alt="">
+  <img src="https://imgur.com/a/isPUB" alt="That's Kevin.">
   </body></html>
