Added eslintrc.json to bash, Thurs 2/22

--- a/index.html
+++ b/index.html
@@ -37,5 +37,8 @@
     </ol>
   </div>
 
-  <img src="https://imgur.com/a/isPUB" alt="That's Kevin.">
-  </body></html>
+  <img src="https://i.imgur.com/voBEvDE.jpg" alt="That's Kevin.">
+  <script type="text/javascript" src="js/greeting.js">
+  </script>
+</body>
+</html>
